# segment-gen

./: Cargo.toml  setup_env.sh
src/: main.rs
